fix: add toggle password visibility button
Keycloak commit 86c0e338d92861bb8d73a6dc66fd2aa1c861fc6f in Keycloak 23

> Toggle visibility of password input fields in login-ftl-based pages

Issue #239

--- a/files/themes/UCS/login/resources/css/login.css
+++ b/files/themes/UCS/login/resources/css/login.css
@@ -19,6 +19,18 @@ textarea.pf-c-form-control {
     font-size: var(--pf-global--FontSize--xs);
 }
 
+.login-pf-page .pf-c-input-group {
+    --pf-c-input-group--BackgroundColor: transparent;
+}
+.login-pf-page .pf-c-button.pf-m-control {
+    height: 50px;
+    margin: 0 0 0 -4px;
+    background-color: var(--bgc-inputfield-on-container);
+    --pf-c-button--after--BorderColor: transparent;
+    --pf-c-button--after--BorderWidth: 0;
+    --pf-c-button--BorderRadius: var(--border-radius-interactable);
+}
+
 p.instruction {
     margin: 5px 0;
 }
